# BizWeave

./: .dockerignore  .gitignore  AGENTS.md  DESIGN.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.supabase  IMPROVEMENTS.md  Makefile  README.md  db.test.Dockerfile  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  polsia_technical_deep_dive.md  pyproject.toml  vitest.config.mjs  vitest.setup.ts
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_storage.py
backend/app/: database.py  main.py  settings.py
docs/: AGENT_FRAMEWORK_MIGRATION.md  BIZWEAVE_OPERATOR_PLAN.md  CODE_REVIEW_2025-06-07.md  IMPLEMENTATION_PLAN.md  POLSIA_CLONE_EXPANSION_ROADMAP.md  POLSIA_GAP_ANALYSIS.md  TECHNICAL_EXECUTION_PLAN.md  orm-ownership-boundaries.md
docs/supabase/: migration-checklist.md  rls-baseline.sql  uuid-mapping-migration.sql
mobile/: App.tsx  README.md  app.json  package.json  tsconfig.json
mobile/src/: api.ts  push.ts
plans/: audit-fix-plan.md  bizweave-plan.md
prisma/: schema.prisma
prisma/sql/: 001_pgvector_rls.sql
scripts/: backend-alembic.sh  run-pgtap-tests.sh  scheduler-worker.mjs  seed-dogfood.mjs
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: dynamic-form.tsx  login-form.tsx  oauth-buttons.tsx  results-table.tsx  update-password-form.tsx
src/lib/: auth-constants.ts  auth.ts  crypto.ts  db.ts  env.ts  management-api-schema.d.ts  motion.ts  rate-limit.ts  utils.ts  (+2 more)
supabase/: config.toml
worker/: tsconfig.json
(+225 files in other folders)
